Cartas con imagenes e información

--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 
     </head>
     <body>
-        <h2>SliderHover</h2>
-
+        <h2>Ejercicios CSS - SliderHover</h2>
         <div class="slider-frame">
             <ul>
                 <li><img src="img/1.png" alt=""></li>
@@ -20,5 +19,52 @@
                 <li><img src="img/5.jpg" alt=""></li>
             </ul>
         </div>
+
+        <section id="hover">
+        <div class="container">
+            <div class="wrapper">
+                <div class="card_area">
+                    <div class="card">
+                        <img src="img/image1.jpg" alt="leon">
+                        <div class="overlay">
+                            <h1>León</h1>
+                            <p>El <span>León</span> es un mamífero carnívoro de origen africano de la familia de los félidos y una de las cinco especies del género Panthera.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div> 
+
+        <div class="container">
+            <div class="wrapper">
+                <div class="card_area">
+                    <div class="card">
+                        <img src="img/image2.jpg" alt="tiburon">
+                            <div class="overlay">
+                                <h1>Tiburon Blanco</h1>
+                                <p>El <span>tiburon blanco</span> es una especie de pez cartilaginoso lamniforme de la familia Lamnidae (escualo). Vive en las aguas cálidas y templadas de casi todos los océanos.</p>
+                            </div>
+                        </div>    
+                    </div>
+                </div>    
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="wrapper">
+                <div class="card_area">
+                    <div class="card">
+                        <img src="img/image3.jpg" alt="tiburon">
+                            <div class="overlay">
+                                <h1>Águila Calva</h1>
+                                <p>El <span>águila calva</span> es un ave rapaz accipitriforme​ de la familia Accipitridae, que habita en América del Norte, del sur de Canadá a Baja California Sur y Sonora en México.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        </section>
+
     </body>
 </html>
